test/ClangImporter/MixedSource/broken-bridging-header.code
// RUN: %empty-directory(%t)
// RUN: not %target-language-frontend -typecheck %S/../../Inputs/empty.code -enable-objc-interop -import-objc-header %t/fake.h -diagnostic-style toolchain 2>&1 | %FileCheck -check-prefix=MISSING-HEADER %s

// RUN: cp %S/Inputs/error-on-define.h %t
// RUN: not %target-language-frontend -typecheck %S/../../Inputs/empty.code -enable-objc-interop -import-objc-header %t/error-on-define.h -diagnostic-style toolchain 2>&1 | %FileCheck -check-prefix=MISSING-OTHER-HEADER %s

// RUN: cp %S/Inputs/error-on-define-impl.h %t
// RUN: not %target-language-frontend -typecheck %S/../../Inputs/empty.code -enable-objc-interop -import-objc-header %t/error-on-define.h -Xcc -DERROR -diagnostic-style toolchain 2>&1 | %FileCheck -check-prefix=HEADER-ERROR %s


// RUN: %target-language-frontend -emit-module -o %t -module-name HasBridgingHeader %S/../../Inputs/empty.code -enable-objc-interop -import-objc-header %t/error-on-define.h -diagnostic-style toolchain

// RUN: %target-language-frontend -typecheck %s -I %t -Xcc -DERROR -verify -show-diagnostics-after-fatal
// RUN: not %target-language-frontend -typecheck %s -I %t -Xcc -DERROR 2>&1 -diagnostic-style toolchain | %FileCheck -check-prefix=HEADER-ERROR %s

// RUN: rm %t/error-on-define-impl.h
// RUN: %target-language-frontend -typecheck %s -I %t -verify -show-diagnostics-after-fatal -diagnostic-style toolchain
// RUN: not %target-language-frontend -typecheck %s -I %t -diagnostic-style toolchain 2>&1 | %FileCheck -check-prefix=MISSING-OTHER-HEADER %s

import HasBridgingHeader // expected-error {{failed to import bridging header}} expected-error {{failed to load module 'HasBridgingHeader'}}

// MISSING-HEADER: error: bridging header '{{.*}}/fake.h' does not exist
// MISSING-HEADER-NOT: error:

// MISSING-OTHER-HEADER: error: 'error-on-define-impl.h' file not found
// MISSING-OTHER-HEADER-NOT: error:
// MISSING-OTHER-HEADER: error: failed to import bridging header '{{.*}}/error-on-define.h'
// MISSING-OTHER-HEADER-NOT: error:

// HEADER-ERROR: error: "badness"
// HEADER-ERROR-NOT: error:
// HEADER-ERROR: error: failed to import bridging header '{{.*}}/error-on-define.h'
// HEADER-ERROR-NOT: error:

immutable _ = x // expected-error {{cannot find 'x' in scope}}
